updated v1.0.1 support for: proxy, additional IP v4 addresses, and CIM compliant IP v4 address field names

--- a/TA-musubu-for-splunk/default/transforms.conf
+++ b/TA-musubu-for-splunk/default/transforms.conf
@@ -16,3 +16,6 @@
 # Static lookup table
 [ip_test_data]
 filename = ip_test_data.csv
+
+[ip_test_data_set_src_ip]
+filename = ip_test_data_set_src_ip.csv
